# android-tools-static

./: .gitignore  README.md  VERSION.txt  base_versions.ini  license_considerations.md  meson.build  meson_options.txt  onlypatch.patch  windows-compatibility.md
.github/scripts/: process_release_archives.sh
.github/workflows/: build.yml  cross-containers.yml  main.yml  release.yml
SBOM_scripts/: README.md  alpine_cross.py  alpine_native.py  base.py  base_versions.py  macos.py  pip_meson.txt  proj_types.py  pyproject.toml  save_args.py  shared_arguments.py  windows.py
SBOM_scripts/cyclonedx/: README.md  generators.py  generic_component.py  util.py
SBOM_scripts/git/: README.md  patch_id.py  patch_parsing.py  submodule_parsing.py  submodule_verification.py  util.py
SBOM_scripts/high_level/: README.md  document.py  github_runner.py
SBOM_scripts/meson/: README.md  depmf.py  introspect_compiler.py  wrap_info.py  wrap_parse.py  wrap_patches.py
SBOM_scripts/purldb/: README.md  generate.py  keys.py
alpine-docker/: README.md  config-aarch64.mak  config-arm.mak  config-armhf.mak  config-base.mak  config-powerpc64le.mak  config-riscv64.mak  docker-bake.hcl  save-versions.py  universal.Dockerfile
completions/: fix_completions.py  meson.build
completions/bash/: meson.build
crossfiles/: aarch64.ini  armv6l.ini  armv7l.ini  macos x86_64.ini  ppc64le.ini  riscv64.ini  windows aarch64.ini~
docs/: building_from_git.md  packaging.md
etc/: Build process.drawio
meson/: meson.build
nativefiles/: macos arm64.ini  macos cpp_std fix.ini  release_configuration.ini  release_configuration_fullstatic.ini  release_configuration_standardlayout.ini  windows x86_64.ini~
patches/adb/: 0027-Add-support-for-Meson-Wrap-libusb-include.patch  0028-Add-support-for-Meson-Wrap-libusb-include.patch  0028-WIN-fix-compilation.patch  0029-WIN-fix-pointer-casting.patch
patches/boringssl/: 0015-WIN-fix-compilation.patch  README
patches/core/: 0013-fix-missing-cstdint-includes.patch
patches/libziparchive/: 0002-WIN-fix-static-assert-failure.patch
subprojects/: AdbWinApi.wrap  abseil-cpp.wrap  boringssl.wrap  fmt.wrap  libusb.wrap  lz4.wrap  pcre2.wrap  protobuf.wrap  zlib.wrap  zstd.wrap
subprojects/packagefiles/abseil-cpp/: 0001-build-both-host-and-build-libs-in-cross.patch  0002-do-not-bother-building-unused-native-libs.patch
subprojects/packagefiles/boringssl/: 0013-noinstall.patch  0014-add-ppc64le-support.patch  README
subprojects/packagefiles/fmt/: noinstall.patch
subprojects/packagefiles/libusb/: noinstall.patch
subprojects/packagefiles/lz4/: noinstall.patch
subprojects/packagefiles/pcre2/: noinstall.patch
subprojects/packagefiles/protobuf/: 0001-fix-host-abseil-compilation.patch  0002-do-not-build-nonnative-protoc-during-cross-build.patch  0003-fix-windows-symlinks.patch  0004-fix-gcc-15-release-compilation.patch
subprojects/packagefiles/zlib/: noinstall.patch
subprojects/packagefiles/zstd/: noinstall.patch
