# Copyright 2025 meator
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

option(
  'use_bundled_libusb',
  type: 'boolean',
  value: false,
  description: 'Use bundled Google libusb. A wrap or a system dependency ' +
    'are used if set to false.'
)
option(
  'libusb_enable_udev',
  type: 'feature',
  description: 'Enable udev for device enumeration and hotplug support ' +
    '(recommended); only relevant on Linux, other OSes ignore this option'
)
option(
  'generate_manpages',
  type: 'feature',
  description: 'Generate manpages (currently for adb only, more might be ' +
    'added in the future). Requires pandoc executable.'
)
option(
  'generate_sbom_data',
  type: 'boolean',
  value: false,
  description: 'Generate patch lists used for SBOM generation. This should ' +
    'only be enabled in an appropriately configured GitHub Actions runner.'
)
